[WISE-177] Cleanup of core module